pods/deployment-affinity-tolerate.yaml
---
apiVersion: apps/v1

kind: Deployment

metadata:
  name: blue
  labels:
    app: practice-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: practice-pod
  template:
    metadata:
      name: blue
      labels:
        app: practice-pod
    spec:
      containers:
        - name: blue
          image: nginx
      tolerations:
        -
          key: "color"
          operator: "Equal"
          value: "blue"
          effect: "NoSchedule"

      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: color
                    operator: In
                    values:
                      - blue
