pods/deployment-practice.yaml
---
apiVersion: apps/v1

kind: Deployment

metadata:
  name: httpd-frontend
  labels:
    app: practice-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: practice-pod
  template:
    metadata:
      name: http
      labels:
        app: practice-pod
    spec:
      containers:
        - name: httpd
          image: httpd:2.4-alpine
