pods/deployment-with-label-on-master-node.yaml
---
apiVersion: apps/v1

kind: Deployment

metadata:
  name: red
  labels:
    app: practice-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: practice-pod
  template:
    metadata:
      name: red
      labels:
        app: practice-pod
    spec:
      containers:
        - name: red
          image: nginx
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/master
                    operator: Exists
