pods/multi-pod-definition-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: yellow
spec:
  containers:
    - name: lemon
      image: busybox
      command:
        - sleep
        - "3600"

    - image: redis
      name: gold
