pods/pod-definition-multi-pods.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2020-05-15T01:53:13Z"
  labels:
    name: app
  name: app
  namespace: elastic-stack
  resourceVersion: "4151"
  selfLink: /api/v1/namespaces/elastic-stack/pods/app
  uid: cf14c244-45a3-4d2a-a328-921350cd3750
spec:
  containers:
    - image: kodekloud/event-simulator
      imagePullPolicy: Always
      name: app
      resources: {}
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
        - mountPath: /log
          name: log-volume
        - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
          name: default-token-vvcvp
          readOnly: true

    - image: kodekloud/filebeat-configured
      name: sidecar
      volumeMounts:
        - mountPath: /var/log/event-simulator/
          name: log-volume

  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: node01
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
  volumes:
    - hostPath:
        path: /var/log/webapp
        type: DirectoryOrCreate
      name: log-volume
    - name: default-token-vvcvp
      secret:
        defaultMode: 420
        secretName: default-token-vvcvp
status:
  conditions:
    - lastProbeTime: null
      lastTransitionTime: "2020-05-15T01:53:13Z"
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2020-05-15T01:53:20Z"
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2020-05-15T01:53:20Z"
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2020-05-15T01:53:13Z"
      status: "True"
      type: PodScheduled
  containerStatuses:
    - containerID: docker://3e20f7d59d34c859b127bd5732001864de0780a4b5084a5ce8d1ac81b633c7dd
      image: kodekloud/event-simulator:latest
      imageID: docker-pullable://kodekloud/event-simulator@sha256:1e3e9c72136bbc76c96dd98f29c04f298c3ae241c7d44e2bf70bcc209b030bf9
      lastState: {}
      name: app
      ready: true
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2020-05-15T01:53:19Z"
  hostIP: 172.17.0.8
  phase: Running
  podIP: 10.44.0.1
  podIPs:
    - ip: 10.44.0.1
  qosClass: BestEffort
  startTime: "2020-05-15T01:53:13Z"
