pods/pod-definition-readiness-2.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2020-05-15T03:02:09Z"
  labels:
    name: simple-webapp
  name: simple-webapp-1
  namespace: default
  resourceVersion: "1369"
  selfLink: /api/v1/namespaces/default/pods/simple-webapp-1
  uid: b956c2b7-54f4-49be-908b-8a525fe56607
spec:
  containers:
    - image: kodekloud/webapp-delayed-start
      imagePullPolicy: Always
      name: simple-webapp
      ports:
        - containerPort: 8080
          protocol: TCP
      resources: {}
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      livenessProbe:
        httpGet:
          path: /live
          port: 8080
        periodSeconds: 1
        initialDelaySeconds: 80
      volumeMounts:
        - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
          name: default-token-q7cxg
          readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: node01
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
  volumes:
    - name: default-token-q7cxg
      secret:
        defaultMode: 420
        secretName: default-token-q7cxg
status:
  conditions:
    - lastProbeTime: null
      lastTransitionTime: "2020-05-15T03:02:09Z"
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2020-05-15T03:02:15Z"
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2020-05-15T03:02:15Z"
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2020-05-15T03:02:09Z"
      status: "True"
      type: PodScheduled
  containerStatuses:
    - containerID: docker://9e7b38c57aa4458ae0e914e5bc2e0ad8d231d5665ffb0f8a15c2e7187735b012
      image: kodekloud/webapp-delayed-start:latest
      imageID: docker-pullable://kodekloud/webapp-delayed-start@sha256:666b95c2ef8e00a74fa0ea96def8d9d69104ec5d9b9b0f49d8a76bd4c94ad343
      lastState: {}
      name: simple-webapp
      ready: true
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2020-05-15T03:02:15Z"
  hostIP: 172.17.0.15
  phase: Running
  podIP: 10.32.0.3
  podIPs:
    - ip: 10.32.0.3
  qosClass: BestEffort
  startTime: "2020-05-15T03:02:09Z"
