pods/pod-definition-readiness.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2020-05-15T03:04:23Z"
  labels:
    name: simple-webapp
  name: simple-webapp-2
  namespace: default
  resourceVersion: "1553"
  selfLink: /api/v1/namespaces/default/pods/simple-webapp-2
  uid: c7f7a09f-9b51-44cf-93ce-fdd17dff4c63
spec:
  containers:
    - env:
        - name: APP_START_DELAY
          value: "80"
      image: kodekloud/webapp-delayed-start
      imagePullPolicy: Always
      name: simple-webapp
      ports:
        - containerPort: 8080
          protocol: TCP
      resources: {}
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
        - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
          name: default-token-q7cxg
          readOnly: true
      readinessProbe:
        httpGet:
          path: /ready
          port: 8080
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: node01
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
  volumes:
    - name: default-token-q7cxg
      secret:
        defaultMode: 420
        secretName: default-token-q7cxg
status:
  conditions:
    - lastProbeTime: null
      lastTransitionTime: "2020-05-15T03:04:23Z"
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2020-05-15T03:04:26Z"
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2020-05-15T03:04:26Z"
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2020-05-15T03:04:23Z"
      status: "True"
      type: PodScheduled
  containerStatuses:
    - containerID: docker://72c6e72e1122a11d0948fbde1b7b5d63b8aea8cb98940e3d4ab06218b973e9a0
      image: kodekloud/webapp-delayed-start:latest
      imageID: docker-pullable://kodekloud/webapp-delayed-start@sha256:666b95c2ef8e00a74fa0ea96def8d9d69104ec5d9b9b0f49d8a76bd4c94ad343
      lastState: {}
      name: simple-webapp
      ready: true
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2020-05-15T03:04:25Z"
  hostIP: 172.17.0.15
  phase: Running
  podIP: 10.32.0.4
  podIPs:
    - ip: 10.32.0.4
  qosClass: BestEffort
  startTime: "2020-05-15T03:04:23Z"
