pods/pod-taint-definition.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mosquito
spec:
  containers:
    - name: mosquito
      image: nginx
  tolerations:
    -
      key: "spray"
      operator: "Equal"
      value: "mortein"
      effect: "NoSchedule"
