pods/pod-volume-definition.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp
spec:
  containers:
    - name: webapp
      image: kodekloud/event-simulator
      volumeMounts:
      - mountPath: /log #path inside container
        name: log-volume
  volumes:
    - hostPath:
        path: /var/log/webapp #path in local system
        type: DirectoryOrCreate
      name: log-volume
