pods/pod-with-commands-v2.yaml
apiVersion: v1
kind: Pod

metadata:
  name: webapp-green

spec:
  containers:
    - name: webapp-green
      image: kodekloud/webapp-color
      command: ["python","app.py"]
      args: ["--color","green"]
