pods/pods_practice1.yaml
apiVersion: v1

kind: Pod

metadata:
  name: redis
  labels:
    name: redis
    app: practice-pod
spec:
  containers:
    - name: redis
      image: redis123
