pods/service-account-pod.yaml
apiVersion: v1

kind: Pod

metadata:
  name: web-dashboard
  labels:
    app: practice-pod
spec:
  containers:
    - name: web-dashboard
      image: kodekloud/my-kubernetes-dashboard
