pods/serviceaccount-deployment.yaml
---
apiVersion: apps/v1

kind: Deployment

metadata:
  name: web-dashboard
  labels:
    app: practice-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: practice-pod
  template:
    metadata:
      name: web-dashboard
      labels:
        app: practice-pod
    spec:
      containers:
        - name: web-dashboard
          image: kodekloud/my-kubernetes-dashboard
      #should be in line with containers
      serviceAccount: dashboard-sa
