pods/ingress-service.yaml
#name=nginx-ingress

---
apiVersion: v1
kind: Service
metadata:
  name: ingress
spec:
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30080
  selector:
    name: nginx-ingress
