pods/ingress-resource-definition.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wear-watch-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /wear
            backend:
              serviceName: wear-service
              servicePort: 80
          - path: /watch
            backend:
              serviceName: video-service
              servicePort: 80
